force-app/main/default/objects/KanbanRow__c/KanbanRow__c.object-meta.xml
<CustomObject>
    <label>Kanban Row</label>
    <nameField>
        <label>Row Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>