force-app/main/default/objects/KanbanRow__c/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <label>API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>