force-app/main/default/objects/KanbanRow__c/fields/Collapsed__c.field-meta.xml
<CustomField>
    <fullName>Collapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapsed</label>
    <type>Checkbox</type>
</CustomField>