force-app/main/default/objects/KanbanRow__c/fields/CssClass__c.field-meta.xml
<CustomField>
    <fullName>CssClass__c</fullName>
    <label>CSS Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>